finaly, some working tests. and a fix to preloader

--- a/test/manual/test.html
+++ b/test/manual/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mocha</title>
+        <title>Manual tests</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="../../../dist/3dage.js"></script>
@@ -9,5 +9,7 @@
         <script src="./renderer.js"></script>
     </head>
     <body>
+      <button onClick="runRenderer()">renderer</button>
+      <button onClick="runLibrary()">library</button>
     </body>
 </html>
