experimenting with tests

--- a/test/manual/test.html
+++ b/test/manual/test.html
@@ -7,9 +7,11 @@
         <script src="../../../dist/3dage.js"></script>
         <script src="./library.js"></script>
         <script src="./renderer.js"></script>
+        <script src="./thing.js"></script>
     </head>
     <body>
       <button onClick="runRenderer()">renderer</button>
       <button onClick="runLibrary()">library</button>
+      <button onClick="runThing()">thing</button>
     </body>
 </html>
