migrate to kefir, fix integration issues, electron tests hanging

--- a/test/manual/test.html
+++ b/test/manual/test.html
@@ -8,10 +8,12 @@
         <script src="./library.js"></script>
         <script src="./renderer.js"></script>
         <script src="./thing.js"></script>
+        <script src="./alltogethernow.js"></script>
     </head>
     <body>
       <button onClick="runRenderer()">renderer</button>
       <button onClick="runLibrary()">library</button>
       <button onClick="runThing()">thing</button>
+      <button onClick="runAll()">all together now</button>
     </body>
 </html>
