--- a/test/manual/test.html
+++ b/test/manual/test.html
@@ -9,11 +9,13 @@
         <script src="./renderer.js"></script>
         <script src="./thing.js"></script>
         <script src="./alltogethernow.js"></script>
+        <script src="./scene.js"></script>
     </head>
     <body>
       <button onClick="runRenderer()">renderer</button>
       <button onClick="runLibrary()">library</button>
       <button onClick="runThing()">thing</button>
       <button onClick="runAll()">all together now</button>
+      <button onClick="runScene()">full scene</button>
     </body>
 </html>
