world pausing, preview tool

--- a/test/manual/test.html
+++ b/test/manual/test.html
@@ -4,7 +4,7 @@
         <title>Manual tests</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="../../../dist/3dage.js"></script>
+        <script src="../../../dist/3dage-dev.js"></script>
         <script src="./library.js"></script>
         <script src="./renderer.js"></script>
         <script src="./thing.js"></script>
